k8s-deploy/dev/documentdb-external-service.yml
apiVersion: v1
kind: Service
metadata:
   name: docdb-dev-banner-mgmt 
spec: 
   type: ExternalName
   externalName: docdb-dev-banner-mgmt.caub6fvh4hyp.ap-south-1.docdb.amazonaws.com
